Added js styling and wheel building

--- a/src/ui-public/index.html
+++ b/src/ui-public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="[TODO]"
+    <meta name="description" content="[TODO]" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Sparse Zoo</title>
     <style>
