Added filtering to tables

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@ limitations under the License.
       name="description"
       content="App for optimizing Neural Networks for production deployment. Developed by Neural Magic."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SparseZoo</title>
     <style>
@@ -37,7 +40,6 @@ limitations under the License.
         right: 0;
         width: 100%;
         height: 100%;
-        overflow: hidden;
       }
     </style>
   </head>
