updating html desc and title

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@ limitations under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="App for optimizing Neural Networks for production deployment. Developed by Neural Magic."
+      content="Tables for display SparseZoo models. Developed by Neural Magic."
     />
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SparseZoo</title>
+    <title>SparseZoo Table</title>
     <style>
       #root {
         position: absolute;
